--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
           <li><a href="{{ "/" | relative_url }}">Home</a></li>
           <li><a href="{{ "/about" | relative_url }}">About</a></li>
           <li><a href="{{ "/research" | relative_url }}">Research</a></li>
-          <li><a href="{{ "https://dhruba-c.github.io/blog/" | relative_url }}">Blog</a></li>
-          <li><a href="{{ "https://dhruba-c.github.io/contact/" | relative_url }}">Contact</a></li>
+          <li><a href="{{ "/blog" | relative_url }}">Blog</a></li>
+          <li><a href="{{ "/contact" | relative_url }}">Contact</a></li>
         </ul>
       </nav>
     </header>
