--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,14 @@
         </ul>
       </nav>
     </header>
+    <section class="hero">
+    <div class="hero-content">
+        <h2>Welcome to My Website</h2>
+        <p>I'm Dhrubajyoti Chakraborty, a PhD student exploring the fascinating world of Economics, Bounded Rationality, and Social Network Analysis.</p>
+        <a href="/about/" class="btn">Learn More About Me</a>
+    </div>
+</section>
+
 
     <main>
       {{ content }}
