--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,8 @@
     </header>
     <section class="hero">
     <div class="hero-content">
-        <h2>Welcome to My Website</h2>
-        <p>I'm Dhrubajyoti Chakraborty, a PhD student exploring the fascinating world of Economics, Bounded Rationality, and Social Network Analysis.</p>
+        <h2>hi!</h2>
+        <p>Sup?</p>
         <a href="/about/" class="btn">Learn More About Me</a>
     </div>
 </section>
