--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     </main>
 
     <footer>
-      <p>&copy; {{ site.title }} | Built with ♥ using Jekyll</p>
+      <p>&copy; {{ site.title }}</p>
     <p>
         <a href="https://github.com/dhruba-c">GitHub</a> |
         <a href="mailto:dhrubajyoti.chakraborty_phd23@ashoka.edu.in">Contact Me</a>
