--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,14 +9,26 @@
 
 /* General Body Styling */
 body {
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    line-height: 1.6;
-    margin: 0;
-    padding: 0;
-    background-color: var(--background-color);
-    color: var(--text-color);
+    font-family: 'Merriweather', serif;
+    line-height: 1.8;
+    color: #333;
 }
+
+h1, h2, h3, h4 {
+    font-family: 'Merriweather', serif;
+    font-weight: 700;
+    color: #333;
+}
+
+a {
+    color: #b30000;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 
 /* Header */
 header {
