--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,6 +7,17 @@
     --white-color: #FFFFFF;
 }
 
+
+
+header, footer {
+    width: 100%;
+    text-align: center;
+}
+
+
+
+
+
 /* General Body Styling */
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -26,6 +37,11 @@ p {
 
 
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
     line-height: 1.75;
     margin: 0 auto;
     max-width: 800px;
@@ -103,8 +119,10 @@ nav ul li a:hover, nav ul li a.active {
     color: var(--white-color);
 }
 
-/* Main Content Area */
+
+
 main {
+    flex:1;
     padding: 20px;
     background: var(--white-color);
     margin: 20px auto;
