--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
 
     </header>
 
-
     <main>
+    <img src="/assets/images/My_photo.jpg" alt="My Photo" class="profile-photo">
       {{ content }}
     </main>
 
